# text-translator-project

./: .env.sample  .flake8  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py  wsgi.py
text_translator/: client.py  service.py
text_translator/api/: apps.py  serializers.py  urls.py  views.py
